# spbu_2020_c_homeworks

./: CMakeLists.txt
homework_1/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
homework_2/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c  task_5_iterative.c  task_5_recursive.c
homework_3/: task_1.c  task_2.c
homework_4/: task_1.c  task_2.c  task_3.c
homework_5/: task_1.c  task_2.c
homework_6/: task_1.c  text.txt
homework_7/: task_1.c  task_2.c  task_2_input.txt
homework_8/: task_1.c
test_1/: task_1.c  task_2.c
test_2/: dates.txt  task_1.c  task_2.c  task_3.c
test_3/: task_1.c  task_2.c  task_3.c
