cmake_minimum_required(VERSION 3.17)
project(spbu_2020_c_homeworks C)

set(CMAKE_C_STANDARD 11)

set(SOURCE_LIB library/commonUtils/numericOperations.c)
set(INPUT_LIB library/commonUtils/inputFunctions.c)

add_library(library ${SOURCE_LIB})
add_library(input_library ${INPUT_LIB})

add_executable(task_1.2 homework_1/task_2.c)
add_executable(task_1.4 homework_1/task_4.c)
add_executable(task_2.1 homework_2/task_1.c)
add_executable(task_2.2 homework_2/task_2.c)
add_executable(task_2.3 homework_2/task_3.c)
add_executable(task_2.4 homework_2/task_4.c)

target_link_libraries(task_2.2 m)
target_link_libraries(task_2.2 library)
target_link_libraries(task_2.3 library)
target_link_libraries(task_2.4 m)
target_link_libraries(task_2.4 input_library)
