cmake_minimum_required(VERSION 3.17)
project(spbu_2020_c_homeworks C)

set(CMAKE_C_STANDARD 11)

set(SOURCE_LIB library/commonUtils/numericOperations.c)
set(LIST_LIB library/list/list.c)
set(INPUT_LIB library/commonUtils/inputFunctions.c)
set(STRING_LIB library/commonUtils/stringOperations.c)

add_library(library ${SOURCE_LIB})
add_library(list_library ${LIST_LIB})
add_library(input_library ${INPUT_LIB})
add_library(string_library ${STRING_LIB})

add_executable(task_1.2 homework_1/task_2.c)
add_executable(task_1.4 homework_1/task_4.c)
add_executable(task_2.1 homework_2/task_1.c)
add_executable(task_2.2 homework_2/task_2.c)
add_executable(task_2.3 homework_2/task_3.c)
add_executable(task_2.4 homework_2/task_4.c)
add_executable(task_2.5 homework_2/task_5.c)
add_executable(task_3.1 homework_3/task_1.c)
add_executable(task_3.2 homework_3/task_2.c)
add_executable(task_4.2 homework_4/task_2.c)

target_link_libraries(task_2.2 m)
target_link_libraries(task_2.2 library)
target_link_libraries(task_2.3 library)
target_link_libraries(task_2.4 m)
target_link_libraries(task_2.4 input_library)
target_link_libraries(task_2.5 input_library)
target_link_libraries(task_3.1 list_library)
target_link_libraries(task_3.2 list_library)
target_link_libraries(task_4.2 string_library)
target_link_libraries(task_4.2 library)
target_link_libraries(string_library library)
